# student-performance-ai

./: .gitignore  pyproject.toml  requirements.txt
configs/: gb_grid_config.json  rf_grid_config.json
data/processed/: X_test.csv  X_train.csv  X_validate.csv  y_test.csv  y_train.csv  y_validate.csv
models/ml_models/: gb.pkl  pr.pkl
notebooks/: model_comparison.ipynb
scripts/: preprocess.py  train_ml.py
src/models/: __init__.py  config_handler.py  grid_search_cv.py  mlp.py  model_handler.py  polynomial_regression.py
src/preprocessing/: __init__.py  csv_handler.py  encoder.py  loader.py  scaler.py  splitter.py
src/utils/: __init__.py  metrics.py  plotting.py
